tests/errors/no-drive.expect
---CODE---
1
---STDERR---
Error: 
8 |    group no_drive {
  |          ^^^^^^^^ [Papercut] Required signal not driven inside the group.
When writing to the port `r.in', the ports [r.write_en] must also be written to.
The primitive type `std_reg' requires this invariant.
